GNU mailutils NEWS -- history of user-visible changes. 2020-11-10
See the end of file for copying conditions.

Please send mailutils bug reports to <bug-mailutils@gnu.org>.

Version 3.10.90 (git)

* Fix incorrect message flags in maildir

Message flags (the "info" filename part) used in maildir file names
where incorrectly mapped to internal mailutils attributes.  This
created interoperability problems.

The bug was reported in http://savannah.gnu.org/bugs/?56428.

After opening the mailbox, mailutils analyzes whether it uses
incorrect flag mapping and fixes it if so.  If the mailbox is opened
in read-write mode, the changes are immediately propagated to the disk
storage.

* Fix message ordering in maildir.

* Fix parsing of IMAP ranges

Version 3.10, 2020-08-14

* mail

** Changed syntax for addressing MIME message part

The familiar dot notation is used.  E.g. 1.2 extracts part 2
from multipart message 1.

** write command

The write (Write) command operates on message parts as well as on
messages.  Decoding is automatic.

* New utility: decodemail

This is a filter program that reads messages from the input mailbox,
decodes textual parts of each multipart message to plain text, and
stores the processed messages in the output mailbox.  Non-multipart
messages as well as message parts that cannot be decoded are
transferred to the output mailbox verbatim.  Optionally, textual parts
can be recoded from their original character set.

* readmsg

** MIME messages are decoded on output

** Improve searches

Requested patterns are searched in textual MIME parts as well.
Regular expression search is also supported.
New options --glob, --regex, and --ignorecase control the type of
search used.

* imap4d: implement TLS in inetd mode

* imap client code

** Fix handling of [TRYCREATE] and similar imap responses

* sieve: quoted strings may span several lines

This fixes the sieve parser to comply to RFC 5228.  Quoted strings may